# plotm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/plotm/: __init__.py  paths.py  plot_manager.py  plot_profile.py
src/plotm/profiles/: mnras.yaml
src/plotm/profiles/defaults/: paper.yaml  presentation.yaml
src/plotm/styles/: default.mplstyle
