[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm", "wheel"]

[project]
authors = [
  {email = "ddegen@ethz.ch", name = "David Degen"}
]
classifiers = [
  "Programming Language :: Python :: 3"
]
dependencies = [
  "matplotlib",
  "PyYAML"
]
description = "Lightweight plotting profile manager for consistent figure sizing and saving."
keywords = ["science", "plotting", "matplotlib", "visualization"]
license = {text = "MIT"}
name = "plotm"
readme = "README.md"
requires-python = ">=3.10"
version = '0.1.0'

[project.optional-dependencies]
dev = [
  "ruff",
  "pre-commit"
]
test = [
  "pytest"
]

[project.urls]

[tool.ruff]
line-length = 100
lint.extend-select = [
  "B",
  "C4",
  "SIM",
  "N",
  "RUF",
  "TCH"
]

[tool.setuptools.packages.find]
where = ["src"]
